# crs-multi-retrieval

./: README.md  patcher.py  pyproject.toml
agents/: multi_retrieval.py
crete/evaluator/: docker_evaluator.py
oss-crs/: base.Dockerfile  builder.Dockerfile  crs.yaml  docker-bake.hcl  example-compose.yaml  patcher.Dockerfile  sample-litellm-config.yaml
